row and column aligned correctly

--- a/src/pages/Application/ViewPage/ViewPage.scss
+++ b/src/pages/Application/ViewPage/ViewPage.scss
@@ -1,33 +1,54 @@
 .tab-100 {
-    .tab-content{
-        width: 100%;
-    }
+  .tab-content {
+    width: 100%;
+  }
 }
 
 .api-table {
-    width: 100%;
-    .api-header,
-    .api-row {
-      display: flex;
-      justify-content: space-between;
-      padding: 0.75rem 0;
-      border-bottom: 1px solid #ddd;
-    }
-    .api-header {
-      font-weight: bold;
-      border-bottom: 2px solid #000;
-    }
-    .api-item {
-      flex: 1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .api-item:first-child {
-      justify-content: flex-start;
-    }
-    .api-item:last-child {
-      justify-content: flex-end;
-    }
+  width: 100%;
+
+  .api-header,
+  .api-row {
+    display: flex;
+    justify-content: space-between;
+    padding: 0.75rem 0;
+    border-bottom: 1px solid #ddd;
   }
-  
+
+  .api-header {
+    font-weight: bold;
+    border-bottom: 2px solid #000;
+  }
+
+  .api-item {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .api-item:first-child {
+    justify-content: flex-start;
+  }
+
+  .api-item:last-child {
+    justify-content: flex-end;
+  }
+}
+
+.header-row {
+  font-size: smaller;
+  font-weight: bold;
+}
+
+.header-row .col-method {
+  padding-left: 40px;
+}
+
+.header-row .col-actions {
+  padding-right: 40px;
+
+}
+.header-row .col-status{
+  padding-right: 20px;
+}
